# retro-go

./: .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LOCALIZATION.md  NETPLAY.md  PATCHING.md  PORTING.md  README.md  THEMING.md  base.cmake  base.make  base.sdkconfig  baseS3.sdkconfig  build_all.bat  build_all.py  build_all.sh  build_sdl2.bat  build_sdl2.sh  config.py  flashmon.bat  flashmon.py  flashmon.sh  fw  fw-config.py  mkfw.py  mkfw.sh  partitions.csv  projects.py  requirements.txt  retro-go.code-workspace  rg_config.py  rg_locate_str.py  rg_tool.py  snes9x.txt  tile.raw
assets/: sdcard.xcf
components/: README.md
components/esp_littlefs/: .bumpversion.cfg  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  component.mk  idf_component.yml  image-building-requirements.txt  library.json  partition_table_unit_test_app.csv  project_include.cmake  sdkconfig.defaults
components/esp_littlefs/.github/: FUNDING.yml
components/esp_littlefs/.github/workflows/: esp_upload_component.yml  pr.yml
components/esp_littlefs/example/: CMakeLists.txt  Makefile  README.md  partitions_demo_esp_littlefs.csv  sdkconfig.defaults
components/esp_littlefs/example/main/: CMakeLists.txt  demo_esp_littlefs.c
components/esp_littlefs/include/: esp_littlefs.h
components/esp_littlefs/src/: esp_littlefs.c  lfs_config.c  lfs_config.h  littlefs_api.h  littlefs_esp_part.c  littlefs_sdmmc.c
components/esp_littlefs/test/: CMakeLists.txt  test_benchmark.c  test_dir.c  test_littlefs.c  test_littlefs_common.c  test_littlefs_common.h  test_littlefs_static_partition.c
docs/: BUILDING.md  THEMING.md
duke3d-go/: CMakeLists.txt  LICENSE_ZLIB  README.md
fmsx/: CMakeLists.txt
(+2039 files in other folders)
